Fix the alignment of the flag icons in message lists
See https://www.woltlab.com/community/thread/300640-flag-in-thread-list-is-sitting-lower-than-other-icons/

--- a/wcfsetup/install/files/style/ui/messageGroup.scss
+++ b/wcfsetup/install/files/style/ui/messageGroup.scss
@@ -110,6 +110,10 @@
 				a {
 					color: inherit;
 				}
+
+				.iconFlag {
+					vertical-align: -3px;
+				}
 			}
 		}
 
